Add Java 9+ module support (JPMS) for jlink compatibility